--- a/src/main/resources/messages_uk_UA.properties
+++ b/src/main/resources/messages_uk_UA.properties
@@ -48,3 +48,7 @@ user.name=Name
 user.creationDate=Registered
 user.roles=Has roles
 user.wallets=Wallets of user
+work.price.from=From
+work.price.up=Up to
+work.price.fromUp.from=From
+work.price.fromUp.to=to
