feat(manager) add wallet money to wallet
Add form and mechanism on user page to add money by manager to chosen user wallet.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -37,12 +37,12 @@ order.items.priceAmount.notAssigned=Not Assigned
 order.delivery.title=Delivery
 order.creationDate.name=Created
 order.note.name=Note
-order.responce.name=Response
-order.responce.text.name=Text
-order.responce.rating.name=Rate
-order.responce.create.name=Create responce
+order.response.name=Response
+order.response.text.name=Text
+order.response.rating.name=Rate
+order.response.create.name=Create responce
 order.create.name=Create order
-order.responce.submit=Submit
+order.response.submit=Submit
 user.email=Contact email
 user.name=Name
 user.creationDate=Registered
@@ -52,3 +52,6 @@ work.price.from=From
 work.price.up=Up to
 work.price.fromUp.from=From
 work.price.fromUp.to=to
+wallet.price.change.add.name=Amount
+wallet.price.change.add.submit=Add money
+wallet.price.change.pickUp=Pick up wallet
