--- a/src/main/resources/messages_uk_UA.properties
+++ b/src/main/resources/messages_uk_UA.properties
@@ -37,12 +37,12 @@ order.items.priceAmount.notAssigned=\u041D\u0435 \u043F\u0440\u0438\u0437\u043D\
 order.delivery.title=\u0414\u043E\u0441\u0442\u0430\u0432\u043A\u0430
 order.creationDate.name=\u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043E
 order.note.name=\u041D\u043E\u0442\u0430\u0442\u043A\u0430
-order.responce.name=\u0412\u0456\u0434\u0433\u0443\u043A
-order.responce.text.name=\u0422\u0435\u043A\u0441\u0442
-order.responce.rating.name=\u0420\u0435\u0439\u0442\u0438\u043D\u0433
-order.responce.create.name=\u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F \u0432\u0456\u0434\u0433\u0443\u043A\u0443
+order.response.name=\u0412\u0456\u0434\u0433\u0443\u043A
+order.response.text.name=\u0422\u0435\u043A\u0441\u0442
+order.response.rating.name=\u0420\u0435\u0439\u0442\u0438\u043D\u0433
+order.response.create.name=\u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F \u0432\u0456\u0434\u0433\u0443\u043A\u0443
 order.create.name=\u0421\u0442\u0432\u043E\u0440\u0435\u043D\u043D\u044F \u0437\u0430\u043C\u043E\u0432\u043B\u0435\u043D\u043D\u044F
-order.responce.submit=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043D\u043D\u044F
+order.response.submit=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043D\u043D\u044F
 user.email=Contact email
 user.name=Name
 user.creationDate=Registered
@@ -52,3 +52,6 @@ work.price.from=From
 work.price.up=Up to
 work.price.fromUp.from=From
 work.price.fromUp.to=to
+wallet.price.change.add.name=Amount
+wallet.price.change.add.submit=Add money
+wallet.price.change.pickUp=Pick up wallet
