feat(project) improve localization
Adds multiple messages and use it in localization.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -55,3 +55,69 @@ work.price.fromUp.to=to
 wallet.price.change.add.name=Amount
 wallet.price.change.add.submit=Add money
 wallet.price.change.pickUp=Pick up wallet
+sort.by=Sort by
+sort.by.username=username
+sort.by.name=name
+filter.by=Filter by
+search.by.username=username
+table.username=Username
+table.firstName=First Name
+table.lastName=Last Name
+table.phone=Phone
+table.roles=Roles
+sort.by.price=Price
+sort.by.status=status
+sort.by.createTime=creation time
+search.by.status=Status
+status.created=Created
+status.waitForPayment=Wait for payment
+status.paid=Paid
+status.inWork=In work
+status.done=Done
+status.canceled=Canceled
+search.by.customer=Customer
+order.action=Action
+search.apply=Apply
+search.by.master=Master
+wallet.name=Wallet
+side.orders=Orders
+side.responses=Responses
+side.wallets=Wallets
+side.users=Users
+side.masters=Masters
+register.confirm=Confirm register
+register.confirm.checkMail=Check mail
+register.confirm.button=Confirm
+order.pay.pickWallet=Pick a wallet
+order.pay.button=Pay
+password.reset.title=Reset password
+password.reset.email.notFind=Email not find
+password.reset.email.title=Email
+signIn=Sign in
+create=Create account
+password.reset.confirm=Confirm reset
+password.reset.checkEmail=Check email
+password.reset.token.invalid=Invalid token
+password.reset.newPassword=Enter new password
+password.reset.newPassword.title=Password
+password.reset.confirm.button=Confirm
+signIn.error=Username or Password not match
+signIn.username=Username
+signIn.password=Password
+user.username=Username
+create.error.username=Username already registered
+user.firstName=First Name
+user.lastName=Last Name
+create.error.email=Email already registered
+user.phone=Phone
+user.password=Password
+order.action.view=View
+order.action.update=Update
+order.action.pay=Pay
+order.action.status=Change status
+main.text1=Our company offers service in a service support and maintenance computers and office equipment. Our staff is completed by high quality experts.
+main.footer=\u00A9 2000 - 2020 All Rights Reserved.
+main.text4=PROFESSIONAL & EXPERT TECHNICIANS
+main.text5=Our highly skilled technicians are carefully selected and vigorously trained in their field of expertise.
+main.text3=We ensure 100% satisfaction across all the repair services we offer to our customers.
+main.text2=Create property
