feat(customer) create wallet
Adds possibility to create wallets with chosen currency and name to customer.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -121,3 +121,5 @@ main.text4=PROFESSIONAL & EXPERT TECHNICIANS
 main.text5=Our highly skilled technicians are carefully selected and vigorously trained in their field of expertise.
 main.text3=We ensure 100% satisfaction across all the repair services we offer to our customers.
 main.text2=Create property
+wallet.create=Wallet create
+wallet.create.name=Wallet name
