fix(WalletRepositorySQL) minor fixes
Fixes wrong url and value in view and not annotated params.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -123,3 +123,4 @@ main.text3=We ensure 100% satisfaction across all the repair services we offer t
 main.text2=Create property
 wallet.create=Wallet create
 wallet.create.name=Wallet name
+wallet.create.currency=Pick up currency
