fix(i18) wrong translations
Fixes wrong translations for roles in pages.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -126,3 +126,9 @@ wallet.create.name=Wallet name
 wallet.create.currency=Pick up currency
 order.modifiedDate.name=Modified
 order.currency.name=Currency
+role.unverified=Unverified
+role.blocked=Blocked
+role.customer=Customer
+role.master=Master
+role.manager=Manager
+role.admin=Admin
